2008-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version,Date): 0.999375-8

	* R/diagMatrix.R (Ops): fix newly introduce bug in <.di> o <numeric>

	* inst/test-tools.R (isValid): new utility, used much in
	* tests/simple.R:

	* man/BunchKaufman-methods.Rd: added too

2008-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsyMatrix.R: add BunchKaufman() methods.
	* R/dspMatrix.R:

	* src/init.c: add dsyMatrix_trf

2008-03-23  Douglas Bates <bates@stat.wisc.edu>

	* DESCRIPTION (Version): release 0.999375-7
	* src/CHMfactor.c (CHMfactor_update): fix

2008-03-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_LDL_D): cleanup, also using
	internal_chm_factor().

	* R/AllGeneric.R: do *not* define a "chol" generic
		(but rather use the implicit one *without* making pivot
		part of the signature)
	* R/*.R: drop the 'pivot' from chol's signature and make
		'pivot=FALSE' a default argument of method definitions.

	* .Rbuildignore: add 'wrld_1deg': I.e. do not put it into released
	version of Matrix

2008-03-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (.T.2.n): drop 0's before coercion to "nMatrix"

	* R/sparseMatrix.R (is.na): new simple method
	* R/denseMatrix.R (is.na): ditto.

	* R/diagMatrix.R (.symDiagonal): newly exported utility.

	* R/diagMatrix.R (Ops): <diag> * <numeric> should not become dgeMatrix!

	* src/UFsparse_download.sh: -->
	* src/CHOLMOD/: update to CHOLMOD version 1.6 (Nov.2007)

2008-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_LDL_D): even faster utility with same
	functionality; barely tested in
	* tests/factorizing.R

	* src/Csparse.c (diag_tC): new functionality to enable faster
	determinant(<dsCMatrix>, .) in
	* R/dsCMatrix.R

2008-03-17 18:53  Douglas Bates <bates@stat.wisc.edu>

	* R/CHMfactor.R, inst/include/Matrix.h, inst/include/Matrix_stubs.c,
	  src/CHMfactor.c, src/CHMfactor.h,