@@ -214,9 +214,9 @@ setMethod("Math", signature(x = "denseMatrix"),
 	  function(x) callGeneric(as(x, "dMatrix")))
                                         # -> ./ddenseMatrix.R has next method
 
-setMethod("rcond", signature(x = "denseMatrix", type = "character"),
-	  function(x, type, ...)
-	  rcond(as(as(x, "dMatrix"), "dgeMatrix"), type=type, ...))
+setMethod("rcond", signature(x = "denseMatrix", norm = "character"),
+	  function(x, norm, ...)
+	  rcond(as(as(x, "dMatrix"), "dgeMatrix"), norm=norm, ...))
 
 setMethod("symmpart", signature(x = "denseMatrix"),
 	  function(x) symmpart(as(x, "dMatrix")))
