@@ -480,8 +480,8 @@ setMethod("norm", signature(x = "sparseMatrix", type = "character"),
 		     stop("invalid 'type'"))
 	  })
 
-setMethod("rcond", signature(x = "sparseMatrix", type = "character"),
-	  function(x, type, ...) {
+setMethod("rcond", signature(x = "sparseMatrix", norm = "character"),
+	  function(x, norm, ...) {
 	      d <- dim(x)
               ## FIXME: qr.R(qr(.)) warns about differing R (permutation!)
               ##        really fix qr.R() *or* go via dense in any cases
@@ -489,7 +489,7 @@ setMethod("rcond", signature(x = "sparseMatrix", type = "character"),
 			warning("rcond(.) via sparse -> dense coercion")
 			as(x, "denseMatrix")
 		    } else if(d[1] > d[2]) qr.R(qr(x)) else qr.R(qr(t(x))),
-		    type = type)
+		    norm = norm, ...)
 	  })
 
 setMethod("cov2cor", signature(V = "sparseMatrix"),
